--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,13 @@ body {
     text-wrap: balance;
   }
 }
+
+/* Hide number input spinners for custom amount fields */
+.no-spinner::-webkit-outer-spin-button,
+.no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.no-spinner[type="number"] {
+  -moz-appearance: textfield;
+}
